<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewTeam" >

    <FrameLayout         
       style="@style/TitleBar"
        android:id="@+id/new_team_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="65dp">
	    <TextView      	           
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:textSize="30sp"
	        android:textColor="@android:color/white"
	        android:textStyle="bold"
	        android:text="@string/new_team_title"/>
    
    </FrameLayout>


    <TextView
        style="@style/Label"
        android:id="@+id/team_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp" />

    <EditText
        android:id="@+id/TeamName"
        android:background="@drawable/text_view_border"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <requestFocus />
    </EditText>
    
    <Button
	        style="@style/buttonStyleBlack"
	        android:id="@+id/add_player"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/add_players"
	        android:textColor="@android:color/white"
    		android:layout_marginBottom="15dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp" />
    
    <TextView
        style="@style/Label"
        android:id="@+id/players_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/players"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp" />

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
        <ListView
        android:background="@drawable/text_view_border"
        android:id="@+id/player_list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="15dp"
        android:layout_above="@+id/buttons">
    </ListView>

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="15dp"
    	android:layout_marginBottom="15dp"
    	android:layout_alignParentBottom='true'>

	    <Button
	        style="@style/buttonStyleConfirm"
	        android:id="@+id/done_adding_players"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/finalize_team"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp" />
	    
	</LinearLayout>
	    
</RelativeLayout>    	    

</LinearLayout>
