<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSetup" >
    
   <FrameLayout         
   	style="@style/TitleBar"
    android:id="@+id/title_bar"
    android:layout_width="fill_parent"
    android:layout_height="65dp">
	   
	   <!-- Title  -->
	   <Button 
	       android:text="Back"
	       android:id="@+id/back_button"
	       android:gravity="center_vertical"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"/>
	   <TextView      	           
	       android:layout_width="match_parent"
	       android:layout_height="match_parent"
	       android:gravity="center"
	       android:text="Game Setup"/>
    
    </FrameLayout>
	
   <!-- Form -->

   <LinearLayout
       android:id="@+id/form"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:layout_below="@+id/title_bar"
       android:layout_centerHorizontal="true"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
       android:orientation="vertical" >
	   <!-- Opponent Name -->
       <TextView
           android:id="@+id/game_opponent_label"
           android:layout_width='fill_parent'
           android:layout_height='wrap_content'
           android:text="@string/game_opponent_label"/>
	   

       <EditText
           android:id="@+id/game_opponent"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10" >

           <requestFocus />
       </EditText>
	   
       <!-- Game Location -->
       <TextView
           android:id="@+id/game_location_label"
           android:layout_width='fill_parent'
           android:layout_height='wrap_content'
           android:text="@string/game_location_label"/>
	   

       <EditText
           android:id="@+id/game_location"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10" >

           <requestFocus />
       </EditText>
       
       <!-- Game Date -->
       <TextView
           android:id="@+id/game_date_label"
           android:layout_width='fill_parent'
           android:layout_height='wrap_content'
           android:text="@string/game_date_label"
           android:inputType='date'/>       
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
			<EditText
	           android:id="@+id/game_date"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:layout_toLeftOf="@+id/date_picker"
	           android:ems="10" >
	           <requestFocus />
	       </EditText>
	       
	       <Button 
	           android:id="@+id/date_picker"
	           android:layout_alignParentRight='true'
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="Calendar"/>
       <!-- Game Notes -->
		    
		</RelativeLayout>



       <TextView
           android:id="@+id/game_notes_label"
           android:layout_width='fill_parent'
           android:layout_height='wrap_content'
           android:text="@string/game_notes_label"/>
              
       <EditText
           android:id="@+id/game_notes"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10" >

           <requestFocus />
       </EditText>

       <Button
           android:id="@+id/confirm"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/confirm" />
    
   </LinearLayout>

</RelativeLayout>
