<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPlayerActivity"
    android:orientation="vertical" >
    
	<FrameLayout         
	    style="@style/TitleBar"
	    android:id="@+id/new_team_title_bar"
	    android:layout_width="fill_parent"
	    android:layout_height="65dp">
	 <TextView      	           
	     android:layout_width="match_parent"
	     android:layout_height="match_parent"
	     android:gravity="center"
	     android:textSize="30sp"
	     android:text="@string/new_player_title"/>
	
	</FrameLayout>

	<!-- Name -->
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height='wrap_content'>
		
		<!--  First Name -->
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height='wrap_content'
		    android:layout_weight="1">
		    
			<TextView
		        style="@style/Label"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:id="@+id/player_first_name_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/player_first_name"/>
			
			<EditText
		        android:id="@+id/PlayerFirstName"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:layout_marginBottom="5dp"
		        android:background="@drawable/text_view_border"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:inputType="textPersonName" >
		
		        <requestFocus />
		    </EditText>
		</LinearLayout>
		
		<!--  Last Name -->
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_weight="1" >

			<TextView
			    android:id="@+id/player_last_name_label"
			    style="@style/Label"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/player_last_name" />

			<EditText
			    android:id="@+id/PlayerLastName"
			    android:layout_width="fill_parent"
			    android:layout_height="40dp"
			    android:background="@drawable/text_view_border"
			    android:inputType="textPersonName"
			   	android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:layout_marginBottom="5dp"/>

		</LinearLayout><!-- End of last name -->
	
	    
	</LinearLayout> <!-- End of name -->

	<!--  Number/Weight -->
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height='wrap_content'>
		
		<!--  Number -->
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height='wrap_content'
		    android:layout_weight="1">
			
		    <TextView
		        style="@style/Label"
		        android:id="@+id/player_number_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:text="@string/player_number"/>
		    
			<EditText
		        android:id="@+id/PlayerNumber"
		        android:background="@drawable/text_view_border"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:layout_marginBottom="5dp"
		        android:inputType="number" >
		    </EditText>
		</LinearLayout><!-- End of number -->
		
		<!-- Weight -->
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_weight="1" >
			
			<TextView
		        style="@style/Label"
		        android:id="@+id/player_weight_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/player_weight"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"/>
		        
					<LinearLayout
			    	    android:orientation="horizontal"
			    	    android:layout_width="fill_parent"
				        android:layout_height="wrap_content">
				        
				        <EditText
				            android:id="@+id/PlayerWeight"
				            android:layout_width="fill_parent"
				            android:layout_height="40dp"
				            android:background="@drawable/text_view_border"
				            android:layout_weight="1"
				            android:inputType="numberDecimal"
				           	android:layout_marginLeft="5dp"
		        			android:layout_marginRight="5dp"/>
				        
				        <TextView
					        android:id="@+id/pounds"
					        android:layout_width="fill_parent"
					        android:layout_height="wrap_content"
					        android:layout_weight="2"
					       	android:layout_marginLeft="5dp"
		        			android:layout_marginRight="5dp"
		        			android:layout_marginBottom="5dp"
					        android:text="lbs">
					    </TextView> <!--  -->    
				</LinearLayout><!-- End of weight editText and units -->
				
		</LinearLayout> <!-- End of Weight -->
	</LinearLayout> <!-- End of Number and Weight -->
	
	
	
	<!-- Hieght -->
	
    	<LinearLayout
    	    android:orientation="vertical"
    	    android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        <TextView
		        style="@style/Label"
		        android:id="@+id/player_height_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/player_height"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp" >
		    
		    </TextView>
		    
		        <LinearLayout
		    	    android:orientation="horizontal"
		    	    android:layout_width="fill_parent"
			        android:layout_height="wrap_content">
					
					<EditText
				        android:id="@+id/PlayerHeightFeet"
				        android:background="@drawable/text_view_border"
				        android:layout_width="fill_parent"
				        android:layout_height="40dp"
				        android:layout_marginBottom="5dp"
				        android:layout_marginLeft="5dp"
				        android:layout_marginRight="5dp"
				        android:layout_weight="1"
				        android:inputType="number" >
				    </EditText>
				    
				    <TextView
				        android:id="@+id/feet"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="feet"
				        android:layout_marginTop="5dp"
				        android:layout_marginRight="5dp"
				        android:layout_weight="1" >
				    </TextView>
				    
				    <EditText
				        android:id="@+id/PlayerHeightInches"
				        android:background="@drawable/text_view_border"
				        android:layout_width="fill_parent"
				        android:layout_height="40dp"
				        android:layout_marginBottom="5dp"
				        android:layout_marginRight="5dp"
				        android:layout_marginLeft="5dp"
				        android:layout_weight="1"
				        android:inputType="number" >
				    </EditText>
				    
				    <TextView
				        android:id="@+id/inches"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="inches"
				        android:layout_weight="1"
				        android:layout_marginTop="5dp"
				        android:layout_marginRight="5dp" >
				    </TextView>
				    
				</LinearLayout>
				
		</LinearLayout>
		
    	
		<LinearLayout
    	    android:orientation="vertical"
    	    android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >			
		</LinearLayout>

		

		
	    <!-- Player Year -->
		<LinearLayout
    	    android:orientation="vertical"
    	    android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
			<TextView
		        style="@style/Label"
		        android:id="@+id/player_year_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
				android:layout_marginLeft="5dp"
		        android:text="@string/player_year"/>
		   <Spinner
		       android:id="@+id/year_spinner"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:entries="@array/year_array"
		       android:prompt="@string/select_a_position"/>
		</LinearLayout> <!-- End of player year -->
		
		<!-- Position -->
		<LinearLayout
    	    android:orientation="vertical"
    	    android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
			<TextView
		        style="@style/Label"
		        android:layout_marginRight="5dp"
				android:layout_marginLeft="5dp"
		        android:id="@+id/player_position_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/player_position"/>
		    <Spinner
		        android:id="@+id/position_spinner"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:entries="@array/positions_array"
		        android:prompt="@string/select_a_year" />
		</LinearLayout><!--  End of position -->
		
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:weightSum="2"
    	android:layout_marginBottom="10dp" >

	    <Button
	        style="@style/buttonStyleConfirm"
	        android:id="@+id/done_adding_players"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/done_adding_players"
	        android:layout_weight="1"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="5dp" 
	        android:layout_gravity="bottom"/>
	    <Button
	        style="@style/buttonStyleCancel"
	        android:id="@+id/add_another_player"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/add_player"
	        android:layout_weight="1"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="10dp" 
	        android:layout_gravity="bottom"/>
	</LinearLayout>

</LinearLayout>